wetty-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wetty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wetty
  template:
    metadata:
      labels:
        app: wetty
    spec:
      containers:
        - name: wetty
          image: wettyoss/wetty
          args:
            - "--ssh-host=alpine-sshd"
          ports:
            - containerPort: 3000
          securityContext:
            privileged: true 
---
apiVersion: v1
kind: Service
metadata:
  name: wetty
spec:
  selector:
    app: wetty
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
