wetty-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wetty
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /wetty
            pathType: Prefix
            backend:
              service:
                name: wetty
                port:
                  number: 3000
  tls:
    - hosts:
        - wetty
